--- a/routingdemo/src/app/about/about.component.html
+++ b/routingdemo/src/app/about/about.component.html
@@ -5,7 +5,7 @@
         <h1>About Us</h1>
         <p class="text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, pariatur dolores autem quas, quisquam accusamus qui amet odio labore iusto quaerat dolore placeat itaque corporis voluptates quia rerum laudantium consectetur.
-
+            durgendra nath upadhyay
         </p>
         <div class = "skills">
             <span>Coding</span>
